# gnucap-python

./: .gitattributes  .gitignore  AUTHORS  CONTRIBUTE  ChangeLog  Makefile.am  Makefile.in  README  TODO  ac.py  ac.py.ref  aclocal.m4  bootstrap  c_python.cc  comp.py  comp.py.ref  config.h.in  configure  configure.ac  crash.py  elmt.py  elmt.py.ref  gc_log_compiler  gnucap.cc  gnucap.i  out3.7  param.py  param.py.ref  py_log_compiler  sim.py  sim.py.ref  simplugin.py  store.py  store.py.ref  test.py  test.py.ref  test_override.py  test_python.cc  use_simplugin.gc
contrib/: README  custom_ac.gcpy  custom_ac.py  simple.py
debian/: README.Debian  README.source  changelog  control  copyright  gnucap-python.docs  gnucap-python.examples  gnucap-python.install  python-gnucap.install  python3-gnucap.install  rules  watch
debian/patches/: git-cruft-not-in-tarball  series
debian/upstream/: signing-key.asc
example/: custom_ac.gcpy  simple.py
examples/: Makefile.am  Makefile.in  inv.py  inv.sp  mosfit.py  mosfit.sp  n.typ  p.typ
gnucap/: Makefile.am  Makefile.in  __init__.py  __init__.py.in  _ap.i  _c_comand.i  _c_exp.i  _component.i  _e_base.i  _e_cardlist.i  _e_elemnt.i  _e_node.i  _element.i  _globals.i  _gnucap_swig.i  _io_.i  _m_cpoly.i  _m_matrix.i  _m_wave.i  _md.i  _s__.i  _u_opt.i  _u_sim_data.i  _u_status.i  ap.py  c_comand.i  c_comand.py  c_exp.py  command.cc  component.py  e_base.i  e_base.py  e_card.i  e_cardlist.py  e_elemnt.py  e_node.py  garbage.cc  globals.py  gnucap.i  gnucap_swig.i  (+15 more)
gnucap/lib/: Makefile.am  garbage.cc
include/: Makefile.am  Makefile.in  numpy_interface.h
m4/: ax_soname.m4
out2.7/: ac.py.ref  comp.py.ref  elmt.py.ref  sim.py.ref  store.py.ref  test.py.ref  use_simplugin.gc.ref
out3.6/: ac.py.ref  comp.py.ref  crash.py.ref  elmt.py.ref  param.py.ref  sim.py.ref  use_simplugin.gc.ref
pending/: batchtest.gc  batchtest.gcpy
